# ruff-sync

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff_sync.py  sitemap.xml  skills-lock.json  tasks.py  tui_requirements.md  type_refactoring_plan.md  versioned_docs_implementation_plan.md  versions.json  zensical_evaluation.md
.agents/: 176_config_gen_plan.md  DEPENDENCIES.md  TESTING.md  args_refactor_plan.md  cli_animation_plan.md  detailed_roadmap_validation.md  doc-fix.md  docs_update_plan.md  formatters-architecture.md  gitlab-reports.md  issue-100-roadmap-plan.md  issue-102-context.md  ruff.toml  tui_design.md  tui_requirements.md  tui_rule_browsing.md  tui_rule_browsing_design.md  typing_phase_3_implementation_plan.md
.agents/decisions/: 0001-type-refactoring-strategy.md  0002-tui-node-ast.md  0003-argument-resolution-layers.md  README.md
.agents/plans/: issue-116-config-validation.md
.agents/skills/adr/: SKILL.md
.agents/skills/dirty-equals/: SKILL.md  (+1 more)
.agents/workflows/: add-test-case.md  update-recordings.md  update-screenshots.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  codspeed.yaml  complexity.yaml  docs.yaml  publish-to-pypi.yaml
0.1.4/: sitemap.xml
0.1.4/agent-skill/: index.html
0.1.4/best-practices/: index.html
0.1.4/pre-commit/: index.html
0.1.4/pre-defined-configs/: index.html
0.1.4/troubleshooting/: index.html
0.1.4/url-resolution/: index.html
0.1.4/usage/: index.html
0.1.5/: 404.html  objects.inv  sitemap.xml
0.1.5/agent-skill/: index.html
0.1.5/best-practices/: index.html
0.1.5/ci-integration/: index.html
0.1.5/configuration/: index.html
0.1.5/examples/: advanced-config.toml  basic-config.toml
0.1.5/search/: search_index.json
0.1.5/troubleshooting/: index.html
0.1.5/url-resolution/: index.html
0.1.5/usage/: index.html
0.1.6/: index.html  objects.inv  sitemap.xml
0.1.6/agent-skill/: index.html
0.1.6/ci-integration/: index.html
0.1.6/configuration/: index.html
0.1.6/contributing/: index.html
0.1.6/inspect/: index.html
0.1.6/installation/: index.html
0.1.6/pre-commit/: index.html
0.1.6/pre-defined-configs/: index.html
0.1.6/troubleshooting/: index.html
0.1.6/url-resolution/: index.html
agent-skill/: index.html
best-practices/: index.html
ci-integration/: index.html
configs/data-science-engineering/: ruff.toml
configs/fastapi/: ruff.toml
configs/kitchen-sink/: ruff.toml
configuration/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/agent-skill/: index.html
dev/best-practices/: index.html
dev/ci-integration/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
dev/inspect/: index.html
dev/installation/: index.html
dev/overrides/: main.html
dev/pre-commit/: index.html
dev/pre-defined-configs/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/url-resolution/: index.html
dev/usage/: index.html
docs/: agent-skill.md  best-practices.md  ci-integration.md  configuration.md  contributing.md  gen_ref_pages.py  index.md  inspect.md  installation.md  pre-commit.md  pre-defined-configs.md  troubleshooting.md  url-resolution.md  usage.md
docs/examples/: advanced-config.toml  basic-config.toml
docs/js/: termynal.js
installation/: index.html
overrides/partials/: version_warning.html
pre-commit/: index.html
pre-defined-configs/: index.html
reference/SUMMARY/: index.html
reference/ruff_sync/: index.html
scripts/: check_dogfood.sh  dogfood.sh  dogfood_check.sh  generate_tui_screenshots.py  gitclone_dogfood.sh
search/: search_index.json
src/ruff_sync/: __init__.py  __main__.py  cli.py  config_io.py  constants.py  core.py  dependencies.py  formatters.py  models.py  pre_commit.py  system.py  types_.py  validation.py
stable/: 404.html  index.html  sitemap.xml
stable/agent-skill/: index.html
stable/best-practices/: index.html
stable/ci-integration/: index.html
stable/configuration/: index.html
stable/contributing/: index.html
stable/inspect/: index.html
stable/installation/: index.html
stable/overrides/: main.html
stable/pre-commit/: index.html
stable/pre-defined-configs/: index.html
stable/troubleshooting/: index.html
stable/url-resolution/: index.html
stable/usage/: index.html
tapes/: _common.tape  check_drift.tape  check_in_sync.tape  help_overview.tape  init_project.tape  pull_basic.tape  validate_strict.tape
tests/: __init__.py  conftest.py  ruff.toml  test_basic.py  test_benchmarks.py  test_check.py  test_ci_integration.py  test_ci_validation.py  test_cli.py  test_config_io.py  test_config_validation.py  test_constants.py  test_corner_cases.py  test_dependencies.py  test_deprecation.py  test_e2e.py  test_formatters.py  test_git_fetch.py  test_minimal_imports.sh  test_parallel.py  test_pre_commit.py  test_project.py  test_rule_logic.py  test_scaffold.py  test_serialization.py  test_system.py  test_themes.py  test_toml_operations.py  test_tui.py  test_tui_models.py  test_tui_types.py  test_url_conversion_to_git.py  test_url_handling.py  test_url_parsing.py  test_whitespace.py
tests/lifecycle_tomls/: multi_upstream_final.toml  multi_upstream_initial.toml  multi_upstream_up2.toml  no_changes_initial.toml  no_changes_upstream.toml  no_dotted_keys_final.toml  no_dotted_keys_initial.toml  no_dotted_keys_upstream.toml  no_ruff_cfg_final.toml  no_ruff_cfg_initial.toml  no_ruff_cfg_upstream.toml  readme_excludes_final.toml  readme_excludes_initial.toml  readme_excludes_upstream.toml  standard_final.toml  standard_initial.toml  standard_upstream.toml
tests/tui/: __init__.py  conftest.py  test_themes.py  test_tui.py  test_tui_types.py
tests/w_ruff_sync_cfg/: pyproject.toml
tests/wo_ruff_cfg/: pyproject.toml
tests/wo_ruff_sync_cfg/: pyproject.toml
troubleshooting/: index.html
url-resolution/: index.html
usage/: index.html
(+133 files in other folders)
