[tool.poetry]
name = "sample_project"
version = "0.0.1.dev0"
description = "Sample project for ruff-sync that includes a ruff-sync config section"
authors = ["Bob Baggins"]

[tool.poetry.scripts]
ruff-sync = "ruff_sync:main"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
files = ["foo.py", "bar.py"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
enable_error_code = ['ignore-without-code', 'explicit-override']

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ['type-arg', 'no-untyped-def']

[tool.ruff-sync]
exclude = ["per_file_ignores", "ignore", "line-length"]

[tool.ruff]
target-version = "py310"
line-length = 99
lint.select = ["ASYNC", "F", "E", "W"]
lint.ignore = [
# formatting conflicts
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
"W191", # tab-indentation
"E111", # indentation-with-invalid-multiple
"E114", # indentation-with-invalid-multiple-comment
"E117", # over-indented
]

[tool.coverage.run]
include = [
    "foo.py",
    "bar.py"
    ]
